--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
-  <body></body>
+  <body>
+    <div id="quiz_container">
+      <div id="question_container">Question</div>
+      <div id="ans1" class="answer_container">answer</div>
+      <div id="ans2" class="answer_container">answer</div>
+      <div id="ans3" class="answer_container">answer</div>
+      <div id="ans4" class="answer_container">answer</div>
+    </div>
+    <script src="./script.js"></script>
+  </body>
 </html>
