Full completing of project

--- a/finish_page.html
+++ b/finish_page.html
@@ -16,6 +16,6 @@
         <span id="wrongQuantity">Wrong:</span>
       </div>
     </div>
-    <script src="./script.js"></script>
+    <script src="./final_script.js"></script>
   </body>
 </html>
